# oauth2-grant-auth-code-grant-type-poc

./: .flake8  .gitignore  README.md  auth_server.py  client.py  config.py  package.json  private_key.pem  public_key.pem  pyproject.toml  resource_server.py
auth_server/: app.py  config.py
client/: app.py  config.py
resource_server/: app.py  config.py
